# c-drive-mover

./: .gitignore  GEMINI.md  README.md  biome.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: gemini-dispatch.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/create/: page.tsx
app/monitor/: page.tsx
app/settings/: page.tsx
app/tasks/: page.tsx
components/: Sidebar.tsx
hooks/: use-monitor-task.ts
lib/: tauri-api.ts  utils.ts
scripts/: bump-version.mjs
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json  test_lock.rs
src-tauri/src/: lib.rs  process_utils.rs  rm.rs  rm_test.rs
