[package]
name = "c-drive-mover"
version = "0.2.16"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.33.1"
fs_extra = "1.3"
junction = "1.2"
walkdir = "2.5"
dirs = "6.0"
everything-sdk = "0.0.6"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
base64 = "0.22"
windows = { version = "0.61.3", features = ["Win32_System_RestartManager", "Win32_Foundation"] }
